<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small"
    tools:context="unicauca.movil.clienthttp.AddActivity">


    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nombre"
        android:layout_marginBottom="@dimen/small"
        />

    <EditText
        android:id="@+id/calificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calificacion"
        android:inputType="number"
        android:layout_marginBottom="@dimen/small"
        />

    <EditText
        android:id="@+id/sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/small"
        android:hint="@string/sinopsis"
        />

    <EditText
        android:id="@+id/duracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/duracion"
        android:layout_marginBottom="@dimen/small"
        />

    <Spinner
        android:id="@+id/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genero"
        android:layout_marginBottom="@dimen/small"
        />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        />

</LinearLayout>
